# rinha-de-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
java/: Dockerfile  docker-compose.yml
java/src/main/java/com/rinha/java/: DbInitializer.java  GlobalHandler.java  JavaApplication.java
java/src/main/java/com/rinha/java/pessoas/: Pessoa.java  PessoaController.java  PessoaRepository.java  PessoaRequest.java  PessoaResponse.java  PessoaService.java
java/src/main/resources/: application.yml  schema.sql
java/src/test/java/com/rinha/java/: JavaApplicationTests.java
nginx/: nginx.conf
piton/: Dockerfile  pyproject.toml
piton/src/: controller.py  db.py  dtos.py  env.py  main.py
