[tool.poetry]
name = "piton"
version = "0.1.0"
description = ""
authors = ["Wesley Almeida <wesley.almeida@fotosensores.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
